--- a/materials/NLP-A/Submitted/2023-2.md
+++ b/materials/NLP-A/Submitted/2023-2.md
@@ -7,6 +7,9 @@ venue: "University of Debrecen, Department of Data Science and Visualization"
 location: "Debrecen, Hungary"
 ---
 
+
+<video controls><source src="https://youtu.be/6REs49aiUb0"></video>
+
 <iframe src="https://youtu.be/6REs49aiUb0"></iframe>
 
 <iframe src="https://youtu.be/f-kFS3KJWdM"></iframe>
