--- a/materials/NLP-A/Submitted/2023-2.md
+++ b/materials/NLP-A/Submitted/2023-2.md
@@ -4,6 +4,7 @@ collection: teaching
 type: "M.Sc course"
 permalink: /materials/NLP-A/Submitted/2023-2
 venue: "University of Debrecen, Department of Data Science and Visualization"
+date: 2024
 location: "Debrecen, Hungary"
 ---
 
