--- a/materials/NLP-A/Submitted/2023-2.md
+++ b/materials/NLP-A/Submitted/2023-2.md
@@ -8,6 +8,7 @@ date: 2024
 location: "Debrecen, Hungary"
 ---
 
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/f-kFS3KJWdM" title="inlp bead 2023 9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <video controls><source src="https://youtu.be/6REs49aiUb0"></video>
 
