--- a/materials/NLP-A/Submitted/2023-2.md
+++ b/materials/NLP-A/Submitted/2023-2.md
@@ -4,30 +4,24 @@ collection: teaching
 type: "M.Sc course"
 permalink: /materials/NLP-A/Submitted/2023-2
 venue: "University of Debrecen, Department of Data Science and Visualization"
-date: 2024
+date: 2024-02-26
 location: "Debrecen, Hungary"
 ---
 
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/ijmr7JnehOY" title="inlp bead 2023 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1125" height="703" src="https://www.youtube.com/embed/OXn4-l4_Z8w" title="inlp bead 2023 3" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/O8vHRqlHuAY" title="inlp bead 2023 4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/-TfTlhmRkQw" title="inlp bead 2023 5" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/8Tfsp2XUaUc" title="inlp bead 2023 6" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1280" height="585" src="https://www.youtube.com/embed/5YhZX3j-Big" title="inlp bead 2023 7" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+<iframe width="1125" height="703" src="https://www.youtube.com/embed/tnM9FImcA1Q" title="inlp bead 2023 8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <iframe width="1250" height="703" src="https://www.youtube.com/embed/f-kFS3KJWdM" title="inlp bead 2023 9" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
-<video controls><source src="https://youtu.be/6REs49aiUb0"></video>
-
-<iframe src="https://youtu.be/6REs49aiUb0"></iframe>
-
-<iframe src="https://youtu.be/f-kFS3KJWdM"></iframe>
-
-<iframe src="https://youtu.be/tnM9FImcA1Q"></iframe>
-
-<iframe src="https://youtu.be/5YhZX3j-Big"></iframe>
-
-<iframe src="https://youtu.be/8Tfsp2XUaUc"></iframe>
-
-<iframe src="https://youtu.be/-TfTlhmRkQw"></iframe>
-
-<iframe src="https://youtu.be/O8vHRqlHuAY"></iframe>
-
-<iframe src="https://youtu.be/OXn4-l4_Z8w"></iframe>
-
-<iframe src="https://youtu.be/UJOdXzOP-3I"></iframe>
-
-<iframe src="https://youtu.be/ijmr7JnehOY"></iframe>
+<iframe width="1250" height="703" src="https://www.youtube.com/embed/6REs49aiUb0" title="inlp bead 2023 10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
