--- a/_teaching/DP-900.md
+++ b/_teaching/DP-900.md
@@ -4,7 +4,7 @@ collection: teaching
 type: "Microsoft course"
 permalink: /teaching/DP-900
 venue: "CERTIPOR, Microsoft, Department of Data Science and Visualization, Faculty of Informatics, University of Debrecen"
-# date: 2024
+date: 204-02-27
 location: "City, Country"
 ---
 
