--- a/materials/NLP-A/Submitted/2023-2.md
+++ b/materials/NLP-A/Submitted/2023-2.md
@@ -48,3 +48,11 @@ location: "Debrecen, Hungary"
 ## 10
 
 <iframe width="1250" height="703" src="https://www.youtube.com/embed/6REs49aiUb0" title="inlp bead 2023 10" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## 11
+
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/ZGurWam7eX0" title="inlp bead 2023 11" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+## 12
+
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/iF4F0KHlNXk" title="inlp bead 2023 12" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
