--- a/_teaching/AZ-900.md
+++ b/_teaching/AZ-900.md
@@ -1,5 +1,5 @@
 ---
-title: "AZ-900: Microsoft Azure Fundamentals"
+title: "Microsoft Azure Fundamentals (AZ-900)"
 collection: teaching
 type: "Microsoft course"
 permalink: /teaching/AZ-900
