--- a/_teaching/DP-900.md
+++ b/_teaching/DP-900.md
@@ -1,5 +1,5 @@
 ---
-title: "AZ-900: Microsoft Azure Fundamentals"
+title: "Microsoft Azure Data Fundamentals (DP-900)"
 collection: teaching
 type: "Microsoft course"
 permalink: /teaching/DP-900
