--- a/materials/NLP-I/codes/III-vectorization.ipynb
+++ b/materials/NLP-I/codes/III-vectorization.ipynb
@@ -6,7 +6,7 @@
         "id": "1UM7FEbVWJXj"
       },
       "source": [
-        "# Vectorization\n",
+        "# Labor - III. Vectorization\n",
         "\n",
         "Magyar:\n",
         "\n",
@@ -34,15 +34,20 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Indexing"
-      ],
       "metadata": {
         "id": "7ZWOSneLWc_r"
-      }
+      },
+      "source": [
+        "## Indexing"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "mBXdwOdeWcj0"
+      },
+      "outputs": [],
       "source": [
         "import nltk\n",
         "from nltk.tokenize import word_tokenize\n",
@@ -57,12 +62,7 @@
         "    vocab[word] = i\n",
         "\n",
         "print(\"Vocab:\", vocab)"
-      ],
-      "metadata": {
-        "id": "mBXdwOdeWcj0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -128,6 +128,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_22z5MT3b-yq"
+      },
       "source": [
         "## TF-IDF\n",
         "\n",
@@ -142,10 +145,7 @@
         "<b>TF (Term Frequency):</b> Occurrence of a specific word in the document, normalized to all words in the document.\n",
         "\n",
         "<b>IDF (Inverse Document Frequency):</b> A measure of how rare a word is in the entire corpus. It is the ratio of the number of documents in the corpus to the number of documents in which the word appears."
-      ],
-      "metadata": {
-        "id": "_22z5MT3b-yq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -241,6 +241,9 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "NLP",
       "language": "python",
@@ -249,9 +252,6 @@
     "language_info": {
       "name": "python",
       "version": "3.11.4"
-    },
-    "colab": {
-      "provenance": []
     }
   },
   "nbformat": 4,
