--- a/materials/NLP-I/codes/III-vectorization.ipynb
+++ b/materials/NLP-I/codes/III-vectorization.ipynb
@@ -193,12 +193,12 @@
         "Magyar:\n",
         "- D = Összes dokumentum száma.\n",
         "- d = Azoknak a dokumentumoknak a száma amelyek tartalmazzák az adott szót.\n",
-        "- IDF(t) = log(D)\n",
+        "- IDF(t) = log(D/d)\n",
         "\n",
         "English:\n",
         "- D = Number of all documents.\n",
         "- d = The number of documents that contain the given word.\n",
-        "- IDF(t) = log(D)"
+        "- IDF(t) = log(D/d)"
       ]
     },
     {
