--- a/materials/NLP-I/codes/V-neural-network.ipynb
+++ b/materials/NLP-I/codes/V-neural-network.ipynb
@@ -191,12 +191,7 @@
       },
       "outputs": [],
       "source": [
-        "# Evaluate the model on the test set\n",
-        "loss_cv, accuracy_cv = model_cv.evaluate(test_df_cv, test_df_labels)\n",
-        "print('Test accuracy (CV):', accuracy_cv)\n",
-        "\n",
-        "loss_tfidf, accuracy_tfidf = model_tfidf.evaluate(test_df_tfidf, test_df_labels)\n",
-        "print('Test accuracy (TFIDF):', accuracy_tfidf)"
+        "# Evaluate the model on the test set"
       ]
     },
     {
